tests/init_state/ref_obligations/mut_ref_write_linear_pointee.err.expected
error: at 11:5: [INIT-DerefPointeeStateMismatch] In function 'f', block 'entry': cannot write into pointee of 'r': pointee must be uninitialized here, but is initialized
    |
 10 |   entry:
 11 |     r.* = Linear::V(5);
    |     ^^^^^^^^^^^^^^^^^^
 12 |     return
    |
